# social_media_env

./: .gitignore  Dockerfile  README.md  __init__.py  docker-compose.yml  g_colab.py  inference.py  model.py  openenv.yaml  pyproject.toml  requirements.txt  social_media_env.py
UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
server/: app.py
social_media_env/: Dockerfile  README.md  __init__.py  app.py  client.py  models.py  openenv.yaml  pyproject.toml  social_media_env.py  tasks.py
social_media_env/openenv_social_media_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
social_media_env/server/: Dockerfile  __init__.py  app.py  client.py  pyproject.toml  reward.py  social_media_env_environment.py
